WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199480
UI process exception when dragging an <attachment> with no content type
https://bugs.webkit.org/show_bug.cgi?id=199480
Summary
UI process exception when dragging an <attachment> with no content type
Tim Horton
Reported
2019-07-03 16:42:49 PDT
UI process exception when dragging an <attachment> with no content type
Attachments
Patch
(5.03 KB, patch)
2019-07-03 16:43 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-07-03 16:43:57 PDT
Created
attachment 373435
[details]
Patch
Tim Horton
Comment 2
2019-07-03 16:43:59 PDT
<
rdar://problem/44351353
>
WebKit Commit Bot
Comment 3
2019-07-03 17:42:36 PDT
Comment on
attachment 373435
[details]
Patch Clearing flags on attachment: 373435 Committed
r247120
: <
https://trac.webkit.org/changeset/247120
>
WebKit Commit Bot
Comment 4
2019-07-03 17:42:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug