UI process exception when dragging an <attachment> with no content type https://bugs.webkit.org/show_bug.cgi?id=199480 <rdar://problem/44351353>

Reviewed by Wenson Hsieh.

Source/WebKit:

* UIProcess/API/Cocoa/APIAttachmentCocoa.mm:
(API::Attachment::mimeType const):
(API::Attachment::utiType const):
* UIProcess/Cocoa/WebViewImpl.mm:
(WebKit::WebViewImpl::startDrag):
Make null or empty contentType fail the drag, instead of crashing.

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/WKAttachmentTests.mm:
(TestWebKitAPI::TEST):
Add a test; before the change, it crashes.


Canonical link: https://commits.webkit.org/213386@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247120 268f45cc-cd09-0410-ab3c-d52691b4dbfc